Don't rely on the java.se.ee module which is going away in Java 11.